--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,42 @@
+# Build directories
+build/
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
 
-build
-.vscode
+# Generated assembly and object files
+*.asm
+*.o
+*.obj
+
+# Executable output
+out
+out.exe
+kurolang
+kurolang.exe
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+
+# Backup files
+*.bak
+*.backup
