Add C++23 support, implement error reporting, and enhance parser and code generation features
- Update CMakeLists.txt to set C++ standard to 23.
- Introduce .clangd configuration for improved code analysis.
- Add error reporting functionality to provide detailed feedback on parsing errors.
- Refactor parser to support function definitions and improve expression handling.
- Enhance code generation to handle variable declarations and print statements.
- Create a comprehensive language specification document outlining Husk's features and design philosophy.
- Update main program to utilize new features and improve debugging capabilities.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.20)
 
 project(husk)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -16,6 +16,7 @@ include_directories(${LLVM_INCLUDE_DIRS})
 separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
 add_definitions(${LLVM_DEFINITIONS_LIST})
 
+# Main compiler executable
 add_executable(husk src/main.cpp)
 
 # Link against LLVM libraries (including native target support)
@@ -28,3 +29,18 @@ llvm_map_components_to_libnames(llvm_libs
   x86codegen      # For Intel
 )
 target_link_libraries(husk ${llvm_libs})
+
+# Testing setup
+enable_testing()
+
+# Test executable using amalgamated Catch2
+add_executable(tests 
+  tests/compiler_tests.cpp
+  external/catch_amalgamated.cpp
+)
+target_include_directories(tests PRIVATE external)
+target_link_libraries(tests PRIVATE ${llvm_libs})
+
+# Register with CTest
+include(CTest)
+add_test(NAME CompilerTests COMMAND tests)
